--- a/app/templates/app/profileA.html
+++ b/app/templates/app/profileA.html
@@ -27,8 +27,48 @@ profile
                   <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">WELCOME BACK ADMIN</p>
-                      STATUS HERE
+                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Log in</p>
+                          
+                          <div class="text-center fw-bold">
+                            {% if messages %}
+                              {% for message in messages %}
+                                <div>{{ message }}</div>
+                              {% endfor %}
+                            {% endif %}
+                          </div>
+
+                          <form class="mx-1 mx-md-4" action="" method="POST">
+                            {% csrf_token %}
+                                 
+                            <div class="d-flex flex-row align-items-center mb-4">
+                              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                              <div class="form-outline flex-fill mb-0">
+                                <label class="form-label" for="form3Example3c">Username {{user.username}}</label>
+                              </div>
+                            </div>
+          
+                            {% comment %} <div class="d-flex flex-row align-items-center mb-4">
+                              <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                              <div class="form-outline flex-fill mb-0">
+                                <label class="form-label" for="form3Example4c">Password</label>
+                                <input type="password" id="form3Example4c" class="form-control" name="pass"/>                              
+                              </div>
+                            </div> {% endcomment %}
+          
+                            <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                              <button type="submit" class="btn btn-primary btn-lg">Log Out</button>
+                            </div>
+          
+                          </form>
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        <script src="" async defer></script>
     </body>
 </html>
 {% endblock main-content %}
