--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -91,9 +91,10 @@
               
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!--Thanh profile-->
+                {% if user.username %}
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Username
+                    {{user.username}}
                   </a>
                   <ul class="dropdown-menu">
                     <li>
@@ -119,7 +120,7 @@
 
                   </ul>
                 </li>
-
+                {% else %}
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'login' %}" >
                     <i class="bi bi-box-arrow-in-left" ></i>
@@ -138,6 +139,7 @@
                     Register as companies
                   </a>
                 </li>
+                {% endif %}
                 
               </ul>
             </div>
