--- a/app/templates/app/profileE.html
+++ b/app/templates/app/profileE.html
@@ -21,14 +21,19 @@
                   <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">WELCOME BACK BOSS</p>
+                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">WELCOME BACK {{user.username}}</p>
                       Which talent shall belong to you
 
-                      <p>Employer: {{user.username}}</p>
-                      <p>Company: {{em.company_name}}</p>
-                      <p>Company address:{{em.address}}</p>
-                      <p>City:{{em.city}}</p>
-                      <p>Introduction: <br>{{em.introduction}}</p>
+                      <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                            <legend class="border-bottom mb-4">Profile Info</legend>
+                            {{ u_form.as_p }}
+                        </fieldset>
+                        <div class="form-group">
+                            <button class="btn btn-outline-info" type="submit">Update</button>
+                        </div>
+                      </form>
     </body>
 </html>
 {% endblock main-content %}
