--- a/app/templates/app/profileJF.html
+++ b/app/templates/app/profileJF.html
@@ -21,12 +21,17 @@
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">WELCOME BACK {{user.username}}</p>
-                      <p>Full name: {{jf.full_name}}</p>
-                      <p>Gender: {{jf.gender}}</p>
-                      <p>Date of birth: {{jf.date_of_birth}}</p>
-                      <p>Finder address:{{jf.address}}</p>
-                      <p>City:{{em.city}}</p>
-                      <p>Introduction: <br>{{jf.introduction}}</p>
+                      <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                            <legend class="border-bottom mb-4">Profile Info</legend>
+                            <p>Gender: {{jf.gender}}</p>
+                            {{ u_form.as_p }}
+                        </fieldset>
+                        <div class="form-group">
+                            <button class="btn btn-outline-info" type="submit">Update</button>
+                        </div>
+                      </form>
     </body>
 </html>
 {% endblock main-content %}
