--- a/app/templates/app/profileE.html
+++ b/app/templates/app/profileE.html
@@ -3,37 +3,86 @@
 {% block main-content %}
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-      <section class="vh-100" style="background-color: #eee;">
-        <div class="container h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-lg-12 col-xl-11">
-              <div class="card text-black" style="border-radius: 25px;">
-                <div class="card-body p-md-5">
-                  <div class="row justify-content-center">
-                    <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-      
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">WELCOME BACK {{user.username}}</p>
-                      Which talent shall belong to you
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="">
+  <!-- Add your custom CSS styles or link to a CSS file -->
+  <style>
+    /* Example CSS styles */
+    .form-container {
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    .form-group {
+      margin-bottom: 20px;
+    }
+    .form-group label {
+      font-weight: bold;
+    }
+    .form-group input[type="text"],
+    .form-group textarea {
+      width: 100%;
+      padding: 8px;
+    }
+    .form-group .error-message {
+      color: red;
+    }
+  </style>
+</head>
+<body>
+  <section class="vh-100" style="background-color: #eee;">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-lg-12 col-xl-11">
+          <div class="card text-black" style="border-radius: 25px;">
+            <div class="card-body p-md-5">
+              <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                      <form method="POST" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <fieldset class="form-group">
-                            <legend class="border-bottom mb-4">Profile Info</legend>
-                            {{ u_form.as_p }}
-                        </fieldset>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">{{user.username}}</p>
+                  <div class="form-container">
+                    <form method="POST" enctype="multipart/form-data">
+                      {% csrf_token %}
+                      <fieldset class="form-group">
+                        <legend class="border-bottom mb-4"><b>Profile Info</b></legend>
                         <div class="form-group">
-                            <button class="btn btn-outline-info" type="submit">Update</button>
+                          <label for="company-name">Company Name</label>
+                          <input type="text" id="company-name" name="company_name" value="{{ em.company_name }}" required>
                         </div>
-                      </form>
-    </body>
+                        <div class="form-group">
+                          <label for="address">Address</label>
+                          <textarea id="address" name="address" rows="3" required>{{ em.address }}</textarea>
+                        </div>
+                        <div class="form-group">
+                          <label for="city">City</label>
+                          <input type="text" id="city" name="city" value="{{ em.city }}" required>
+                        </div>
+                        <div class="form-group">
+                          <label for="introduction">Introduction</label>
+                          <textarea id="introduction" name="introduction" rows="5" required>{{ em.introduction }}</textarea>
+                        </div>
+                        <div class="form-group">
+                          <button class="btn btn-outline-info" type="submit">Update</button>
+                        </div>
+                      </fieldset>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Add your custom JavaScript code if needed -->
+  <script>
+    // Example JavaScript code
+  </script>
+</body>
 </html>
 {% endblock main-content %}
