--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row justify-content-center mt-0">
         <div class="col-md-10 col-sm-12 text-center">
-            <h1 class="display-10">Employment timelines</h1>
+            <h1 class="display-10">Welcome to O.J.F.A</h1>
         </div>
     </div>
 </div>
@@ -16,10 +16,17 @@
         {% for _ in "123" %}
         <div class="col-md-6 offset-md-3">
             <div class="card mb-4 post-card">
-                <img src="{% static 'app/image/logo.jpg' %}" alt="Your Picture" class="card-img-top img-fluid">
+                <a href="{% url 'post' %}">
+                    <img src="{% static 'app/image/logo.jpg' %}" alt="Your Picture" class="card-img-top img-fluid">
+                </a>
                 <div class="card-body">
-                    <h5 class="card-title">Caption for your Picture</h5>
-                    <p class="card-text">Welcome to O.J.F.A</p>
+                    <a href="{% url 'post' %}">
+                        <h5 class="card-title">Caption for your Picture</h5> <!-- Wrap the text with <a> tag -->
+                    </a>
+                    <p class="card-text">Content inside</p>
+                    
+                    <div>Username</div>
+                    <div>Date</div>
                 </div>
             </div>
         </div>
