--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -4,18 +4,18 @@
 {% block main-content %}
 
 <div class="container">
-    <div class="row justify-content-center mt-0">
+    <div class="row justify-content-center mt-5">
         <div class="col-md-10 col-sm-12 text-center">
             <h1 class="display-10">Welcome to O.J.F.A</h1>
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="container mt-5">
     <div class="row row-cols-1 row-cols-md-2 g-4">
         {% for _ in "123456" %}
         <div class="col ">
-            <div class="card">
+            <div class="card mt-4 mx-5 w-75">
                 <a href="{% url 'post' %}">
                     <img src="{% static 'app/image/logo.jpg' %}" alt="Your Picture" class="card-img-top img-fluid">
                 </a>
@@ -41,7 +41,7 @@
 </div>
 
 
-
+<div class="row justify-content-center mt-5">
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
       <li class="page-item">
@@ -55,5 +55,6 @@
       </li>
     </ul>
 </nav>
+</div>
 
 {% endblock main-content %}
