--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -154,7 +154,7 @@
                         </div>
                         {% if user.is_job_finder %}
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="apply" class="btn btn-primary btn-lg">Apply</button>
+                          <a type="apply" class="btn btn-primary btn-lg"  href="{% url 'apply' %}" >Apply</a>
                         </div>
                         {% endif %}
                     </div>
