--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -173,10 +173,49 @@
         {% block main-content%}{% endblock main-content%}
 
         <!--Footer-->
-        <footer class ="container--fluid bg-success text-center fixed-bottom p-2 mt-5">
-          Copyright 2023
-        </footer>
-      
+        <hr class="my-4">
+        <div class="container">
+          <footer class="py-5">
+            <div class="row border-bottom pb-3 mb-3">
+              <div class="col-6 col-md">
+                <h5>Home</h5>
+              </div>
+        
+              <div class="col-6 col-md">
+                <h5>Popular Job</h5>
+                <ul class="nav flex-column">
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Information Technology</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Finance and Banking</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Business Management</a></li>
+                </ul>
+              </div>
+        
+              <div class="col-6 col-md">
+                <h5>Salary</h5>
+                <ul class="nav flex-column">
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Below 500$</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">500$ - 1000$</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Above 1000$</a></li>
+                </ul>
+              </div>
+              
+              <div class="col-6 col-md">
+                <h5>Cities</h5>
+                <ul class="nav flex-column">
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Ho Chi Minh City</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Ha Noi</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Da Nang</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Hue</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Nha Trang</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Hai Phong</a></li>
+                </ul>
+              </div>
+
+            </div>
+                  
+            <p class="text-center text-body-secondary">© 2023 TouGras. All rights reserved.</p>
+          </footer>
+        </div>
       <script src="" async defer></script>
     </body>
 </html>
