--- a/app/templates/app/user/profileJF.html
+++ b/app/templates/app/user/profileJF.html
@@ -1,6 +1,21 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block main-content %}
+<!-- Message display code -->
+{% if messages %}
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-md-12">
+      {% for message in messages %}
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endif %}
 <html>
 <head>
   <meta charset="utf-8">
