--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -194,10 +194,30 @@
                   <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Hai Phong</a></li>
                 </ul>
               </div>
-
             </div>
-                  
-            <p class="text-center text-body-secondary">© 2023 TouGras. All rights reserved.</p>
+             
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4">
+              <p class="text-center text-body-secondary">© 2023 TouGras. All rights reserved.</p>
+              
+              <ul class="list-unstyled d-flex">
+                <li class="ms-3">
+                  <a class="link-body-emphasis" href="https://drive.google.com/drive/folders/1geCyo966XONxl-3R3YOm6Do0q54YnfhX?usp=sharing" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-file-earmark-word"></i>
+                  </a>
+                </li>
+  
+                <li class="ms-3">
+                  <a class="link-body-emphasis" href="https://github.com/Ji21127543/intro2se-21clc08-group06" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github">
+                    </i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            
+
+            
+
           </footer>
         </div>
       <script src="" async defer></script>
